--- a/src/_scss/app/layout/_stage.scss
+++ b/src/_scss/app/layout/_stage.scss
@@ -39,7 +39,7 @@ body {
 
     // overflow-x: hidden; /* stops sidebar breaking out with the -1px x value */
     // overflow-y: scroll; // need this?
-    // background: orange;
+    background: orange;
 }
 
 //-----------------------------------------------------------------
